--- a/ds1t-b/André Luiz/css/mobile.css
+++ b/ds1t-b/André Luiz/css/mobile.css
@@ -111,6 +111,53 @@
     transition: .4s;
 }
 
+@media (max-width: 960px){
+    .section-mobile{
+        height: 140vh;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+
+    .section-mobile a{
+        width: 259px;
+        height: 76px;
+    }
+
+    .promotion-container1{
+        grid-column: 1;
+        grid-row: 1;
+        padding-top: 10vh;
+    }
+
+    .promotion-container1 span{
+        font-size: 2.5rem;
+    }
+
+    
+
+    .promotion-text-container-mobile{
+        grid-column: 1;
+        grid-row: 2;
+        width: 100%;
+        justify-content: center;
+    }
+
+    .promotion-text-container-mobile p{
+        font-size: 2.5rem;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        padding: 10px 10px 5px;
+        gap: 10px;
+
+    }
+
+    .promotion-container2{
+        grid-column: 1;
+        grid-row: 3;
+    }
+}
+
 @media (max-width:640px){
     .section-mobile{
         height: 210vh;
