--- a/ds1t-a/juliaSoares/css/home.css
+++ b/ds1t-a/juliaSoares/css/home.css
@@ -9,3 +9,77 @@
     margin-left: 250px;
     height: 600px;
 }
+
+.slider{
+    width: 1344px;
+    margin: 0 auto;
+    overflow: hidden;
+    place-self: center;
+}
+.slides{
+    width: 500%;
+    height: 600px;
+    display: flex;
+}
+.slides input{
+    display: none;
+}
+.slide{
+    width: 25%;
+    position: relative;
+    transition: 2s;
+}
+.manual-navigation{
+    position: absolute;
+    width: 1344px;
+    display: flex;
+    justify-content: center;
+}
+.manual-btn{
+    border: 2px solid #82c3b486;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+.manual-btn:not(:last-child){
+    margin-right: 20px;
+}
+.manual-btn:hover{
+    background-color: #82c3b486;
+}
+#radio1:checked ~ .first{
+    margin-left: 0;
+}
+#radio2:checked ~ .first{
+    margin-left: -25%;
+}
+#radio3:checked ~ .first{
+    margin-left: -50%;
+}
+.navigation-auto div{
+    border: 2px solid #82c3b4b8;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+.navigation-auto{
+    position: absolute;
+    width: 1344px;
+    margin-top: 600px;
+    display: flex;
+    justify-content: center;
+}
+.navigation-auto div:not(:last-child){
+    margin-right: 20px;
+}
+#radio1:checked ~ .navigation-auto .auto-btn1{
+    background-color: #82c3b4b8;
+}
+#radio2:checked ~ .navigation-auto .auto-btn2{
+    background-color: #82c3b4b8;
+}
+#radio3:checked ~ .navigation-auto .auto-btn3{
+    background-color: #82c3b4b8;
+}
