--- a/ds1t-a/juliaSoares/css/menu.css
+++ b/ds1t-a/juliaSoares/css/menu.css
@@ -14,3 +14,83 @@
     text-align: center;
     color: #5c460f;
 }
+
+.container__menu{
+    margin: 0;
+    background: lightgray;
+    text-align: center;
+    font-family: sans-serif;
+    color: #fefefe;
+}
+
+  .container-carrosel {
+    position: relative;
+    width: 300px;
+    margin: 100px auto 0 auto;
+    perspective: 1000px;
+  }
+  
+  .carrosel {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d; 
+    animation: rotate360 60s infinite forwards linear;
+  }
+  .carrosel__img { 
+    position: absolute;
+    width: 150px;
+    height: 250px;
+    top: 20px;
+    left: 10px;
+    right: 10px;
+    background-size: cover;
+    box-shadow:inset 0 0 0 2000px rgba(0,0,0,0.5);
+    display: flex;
+  }
+  
+  span {
+    margin: auto;
+    font-size: 1.75rem;
+  }
+  
+  
+  .carrosel__img:nth-child(1) {
+    background-image: url("../img/cafe-creme.png");
+    transform: rotateY(  0deg) translateZ(430px); }
+  .carrosel__img:nth-child(2) { 
+    background-image: url("https://i.pinimg.com/564x/af/5b/95/af5b95547f5379360157830430212352.jpg");
+      transform: rotateY( 40deg) translateZ(430px); }
+  .carrosel__img:nth-child(3) {
+    background-image: url("../img/cafe-com-caramelo.png");
+    transform: rotateY( 80deg) translateZ(430px); }
+  .carrosel__img:nth-child(4) {
+    background-image: url("../img/cafe-com-leite.png");
+    transform: rotateY(120deg) translateZ(430px); }
+  .carrosel__img:nth-child(5) { 
+    background-image: url("../img/vanilla-bean-frap.png");
+   transform: rotateY(160deg) translateZ(430px); }
+  .carrosel__img:nth-child(6) { 
+    background-image: url("../img/cranberry-juice.png");
+   transform: rotateY(200deg) translateZ(430px); }
+  .carrosel__img:nth-child(7) { 
+    background-image: url("../img/cha-gelado.png");
+   transform: rotateY(240deg) translateZ(430px); }
+  .carrosel__img:nth-child(8) {
+    background-image: url("../img/smoothie-blackberry.png");
+    transform: rotateY(280deg) translateZ(430px); }
+  .carrosel__img:nth-child(9) {
+    background-image: url("../img/matcha-frappe.png");
+    transform: rotateY(320deg) translateZ(430px); }
+  
+  
+  
+  @keyframes rotate360 {
+    from {
+      transform: rotateY(0deg);
+    }
+    to {
+      transform: rotateY(-360deg);
+    }
+  }
+  
