--- a/ds1m-b/viniciusNunes/css/trama.css
+++ b/ds1m-b/viniciusNunes/css/trama.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 5%;
+  padding-left: 5%;
 }
 
 .trama-description {
