--- a/ds1m-b/viniciusNunes/css/responsividade.css
+++ b/ds1m-b/viniciusNunes/css/responsividade.css
@@ -88,7 +88,7 @@
   }
 
   .trama__image-container {
-    transform: translateX(-35%);
+    transform: translateX(-50%);
   }
 
   .creditos {
@@ -96,7 +96,7 @@
   }
 
   .container-logo img {
-    width: 600px;
+    width: 70vw;
   }
 
   .creditos-logos {
