--- a/ds1t-b/André Luiz/css/tab.css
+++ b/ds1t-b/André Luiz/css/tab.css
@@ -113,7 +113,7 @@
 
 @media (max-width: 640px){
     .section-tab{
-        height: 170vh;
+        height: 130vh;
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 100px 1fr 3fr;
@@ -130,7 +130,8 @@
 
     .tab-promotion-container{
         grid-row: 2;
-        grid-column: 1;
+       grid-column: 1;
+       padding-top: 10vh;
     }
 
     .tab-promotion-container a{
