--- a/ds1m-b/felipeflorencio/css/composers.css
+++ b/ds1m-b/felipeflorencio/css/composers.css
@@ -1,17 +1,45 @@
-#chopin {
-    text-align: left;
+.composers{
+    position: relative;
+    padding-top: 50px;
+    padding-left: 40px;
+    padding-right: 40px;
+    gap: 5%;
+    display: flex;
+    flex-direction: column;
+}
+#bgcomposers{
+    top: 8%;
+    left: 0;
+}
+.circle-for-pages{
+    margin-left: 5%;
+    margin-bottom: 10%;
 }
 
-#bethoven {
-    align-items: center;
+.chopin{
+    text-align: left;
+}
+.chopin img{
+    width: 259px;
+    height: 366px;
+}
+.bethoven{
     text-align: center;
     margin-top: 7rem;
 }
-
-#mozart {
+.bethoven img{
+    width: 284px;
+    height: 332px;
+}
+.mozart {
+    width: 100%;
     align-items: flex-end;
     text-align: end;
     margin-top: 2.8rem;
+}
+.mozart img{
+    width: 265px;
+    height: 329px;
 }
 
 @media (max-width:960px) {
