--- a/ds1m-b/felipeflorencio/css/composers.css
+++ b/ds1m-b/felipeflorencio/css/composers.css
@@ -11,6 +11,9 @@
     top: 8%;
     left: 0;
 }
+#bgcomposers-tablet{
+    display: none;
+}
 .circle-for-pages{
     margin-left: 5%;
     margin-bottom: 10%;
@@ -43,59 +46,33 @@
 }
 
 @media (max-width:960px) {
-    #chopin,#bethoven, #mozart {
+    #bgcomposers{
+        display: none;
+    }
+    #bgcomposers-tablet{
+        display: inline;
+        position: absolute;
+        height: 75rem;
+        width: 70rem;
+        top: -25%;
+        left: -7%;
+        z-index: -1;        
+    }
+    
+    .chopin,.bethoven,.mozart{
         text-align: center;
-        margin-top: 0;
+        margin-top: 0px;
         align-items: center;
     }
     .composers {
-        display: flex;
-        flex-direction: column;
-        overflow: hidden;
-        padding: 5%;
-        justify-content: center;
         align-items: center;
-        /* background-color: teal; */
     }
-    .composers ul{
-        display: flex;
-        justify-content: space-around;
-        gap: 8rem;
-        height: 100%;
-        width: 75%;
-        overflow: hidden;
-        /* background-color: tomato; */
-    }
-    .card{
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-        width: 100%;
-        gap: 1.5rem;
-    }
-    .card h2 {
-        font-family: 'Fredericka the Great';
-        font-weight: 400;
-        font-size: 60px;
-        line-height: 59px;
-        color: #D2D1E8;
-        align-self: center;
-    }
-    .card p {
-        font-family: 'Sunflower';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 18px;
-        letter-spacing: 0.11em;
-        color: #D2D1E8;
-        text-align: center;
-    }
-    .card img {
-        flex-shrink: 0;
-        height: 50%;
+    
+   
+    .composers nav{
+        justify-content: space-between;
         width: 100%;
     }
-
     
 
     .buttons {
@@ -108,9 +85,9 @@
         font-size: 16px;
         background-color: #7A3B00;
         color: #D2D1E8;
-        border-radius: 1rem;
-        height: 2rem;
-        width: 5rem;
+        border-radius: 50%;
+        height: 2.5rem;
+        width: 2.5rem;
         font-family: 'Fredericka the Great';
     }
 
@@ -124,5 +101,8 @@
         flex-direction: row;
         justify-content: center;
     }
-
+    .composers li img{
+        width: 20rem;
+        height: 25rem;
+    }
 }
