--- a/ds1m-b/felipeflorencio/css/cards.css
+++ b/ds1m-b/felipeflorencio/css/cards.css
@@ -34,10 +34,12 @@
         height: 100%;
         width: 100%;
         overflow: hidden;
+        margin-left: 1rem;
     }
     .card{
         width: 75vw;
-        gap: 5%;
+        gap: 3%;
+        align-items: center;
     }
     .card__img{
         width: 10rem;
@@ -47,8 +49,7 @@
     }
     .card__text{
         font-size: 24px;
-        width: 48rem;
-        
+        width: 75vw;
     }
     
 }
