--- a/ds1m-b/felipeflorencio/css/composers.css
+++ b/ds1m-b/felipeflorencio/css/composers.css
@@ -80,21 +80,7 @@
         gap: 1rem;
     }
 
-    button {
-        font-family: Frederia;
-        font-size: 16px;
-        background-color: #7A3B00;
-        color: #D2D1E8;
-        border-radius: 50%;
-        height: 2.5rem;
-        width: 2.5rem;
-        font-family: 'Fredericka the Great';
-    }
-
-    button:hover {
-        background-color: #D2D1E8;
-        color: #7A3B00;
-    }
+    
 
     .composers__buttons {
         display: flex;
@@ -105,4 +91,7 @@
         width: 20rem;
         height: 25rem;
     }
+   #next-instrument{
+    color: aqua;
+   }
 }
