--- a/ds1t-a/marceloGabriel-riotGames/css/e-sports.css
+++ b/ds1t-a/marceloGabriel-riotGames/css/e-sports.css
@@ -1,15 +1,20 @@
 .e-sports {
     height: 110vh;
     position: relative;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 5vh;
+    padding-bottom: 5vh;
 }
 
 
 .fundo-e-sports {
     position: absolute;
-    width: 1014px;
-    height: 1031px;
-    left: 22%;
-    top: 80px;
+    width: 62vw;
+    height: 100vh;
+    left: 14%;
+    top: 10%;
     z-index: -1;
 }
 
@@ -27,4 +32,111 @@
     width: 100%;
     font-size: 4.25rem;
     color: var(--primary-color);
+}
+
+.container-conteudo-e-sports {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 30px;
+    background: rgba(69, 17, 9, 0.44);
+    border-radius: 20px;
+    width: 80vw;
+    height: 91vh;
+    padding-top: 2.5vh;
+    padding-bottom: 2vh;
+}
+
+.card-principal-e-sports {
+    background: rgba(14, 29, 40, 0.86);
+    border-radius: 20px;
+    width: 35vw;
+    height: 80vh;
+}
+
+.lista-de-cards-e-sports {
+    display: flex;
+    flex-direction: column;
+    gap: 5vh;
+}
+
+.cards-horizontal {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+#item-um-horizontal, #item-dois-horizontal {
+    background: #222B33;
+    border-radius: 20px;
+    width: 16vw;
+    height: 33vh;
+    position: relative;
+}
+
+#item-um-horizontal img {
+    position: relative;
+    left: 5.7vh;
+    width: 13vw;
+
+}
+
+#item-dois-horizontal img {
+    position: relative;
+    left: 5.7vh;
+    width: 13vw;
+
+}
+
+.cards-vertical {
+    
+}
+
+#item-um-vertical {
+   
+    display: flex;
+    height: 10vh;
+    align-items: baseline;
+  
+    
+  
+}
+
+.conteudo-um {
+    display: flex;
+    flex-direction: column ;
+    background-color: #222B33;
+    
+
+}
+
+#item-dois-vertical {
+
+   
+  
+}
+
+#item-um-vertical img {
+    position: relative;
+    width: 250.76px;
+    height: 122.32px;
+    top: -6.5vh;
+    left: 19vw;
+}
+
+#item-dois-vertical img {
+    position: relative;
+    width: 250.76px;
+    height: 122.32px;
+    top: -6.5vh;
+    left: 19vw;
+}
+
+#item-tres-botao-ver-mais {
+    background-color: #992222;
+    border-radius: 20px;
+    color: #FFFFFF;
+    font-family: 'Ubuntu';
+    font-weight: 700;
+    font-size: 1rem;
 }
