--- a/ds1m-b/felipeflorencio/css/style.css
+++ b/ds1m-b/felipeflorencio/css/style.css
@@ -53,4 +53,13 @@ section {
 }
 
 /* MOBILE */
-@media (max-width:640px) {}
+@media (max-width:640px) {
+    body{
+        width: 230vw;
+        align-items: unset;
+    }
+    section{
+        height: 100vh;
+        padding: 0;
+    }
+}
