--- a/ds1m-b/felipeflorencio/css/header.css
+++ b/ds1m-b/felipeflorencio/css/header.css
@@ -26,3 +26,11 @@ header h2 {
         margin-bottom: 1.5rem;
     }    
 }
+@media (max-width: 640px) {
+    header{
+        width: 100%;
+    }
+    header h2{
+        font-size: 25px;
+    }
+}
