--- a/ds1m-b/felipeflorencio/css/presentation.css
+++ b/ds1m-b/felipeflorencio/css/presentation.css
@@ -51,3 +51,22 @@
     text-align: center;
     margin-right: 42px;
 }
+@media  (max-width:640px){
+    .presentation{
+        gap: 10%;
+        align-items: center;
+    }
+    .presentation h1{
+        width: 100%;
+        height: 100%;
+        font-size: 30vw;
+        text-align: center;
+    }
+    .presentation p{
+        font-size: 10vw;
+    }
+    .presentation button{
+        width: 100vw;
+        height: 100vw;
+    }
+}
