Terminado a responsividade do celular sem os backgrounds

--- a/ds1m-b/felipeflorencio/css/cards.css
+++ b/ds1m-b/felipeflorencio/css/cards.css
@@ -53,3 +53,10 @@
     }
     
 }
+@media(max-width:640px){
+    .card__text{
+        font-size: 18px;
+    width: 70vw;
+    height: 30vw;
+    }
+}
