--- a/ds1m-b/felipeflorencio/css/about.css
+++ b/ds1m-b/felipeflorencio/css/about.css
@@ -66,3 +66,30 @@
       width: 18rem;
    }
 }
+@media (max-width:640px) {
+   .about{
+      background-color: var(--body-color);
+   }
+   .about__container{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+   }
+   #eusou, #felipeflorencio{
+      text-align: center;
+   }
+   #eusou{
+      font-size: 2rem;
+   }
+   #felipeflorencio{
+      font-size: 2.5rem;
+   }
+   .about__container img{
+      height: 10rem;
+      width: 10rem;
+   }
+   .about__container p{
+      width: 100%;
+      font-size: 3vw;
+   }
+}
