--- a/ds1m-b/felipeflorencio/css/header.css
+++ b/ds1m-b/felipeflorencio/css/header.css
@@ -28,9 +28,7 @@ header h2 {
 }
 @media (max-width: 640px) {
     header{
-        width: 100%;
+        margin-left: 0;
     }
-    header h2{
-        font-size: 25px;
-    }
+
 }
