--- a/ds1m-b/felipeflorencio/css/presentation.css
+++ b/ds1m-b/felipeflorencio/css/presentation.css
@@ -53,20 +53,25 @@
 }
 @media  (max-width:640px){
     .presentation{
-        gap: 10%;
-        align-items: center;
+        width: 50%;
+        transform: translate(7%,10%);
+        gap: 5%;
     }
     .presentation h1{
-        width: 100%;
-        height: 100%;
-        font-size: 30vw;
-        text-align: center;
+        font-size: 9.75vw;
     }
     .presentation p{
-        font-size: 10vw;
+        text-align: center;
+        font-size: 3.5vw;
+        height: 100%;
+        width: 70%;
+        margin: 0;
     }
     .presentation button{
-        width: 100vw;
-        height: 100vw;
+        position: absolute;
+        bottom: -20%;
+        left: 50%;
+        height: 10%;
+        width: 150%;
     }
 }
