--- a/ds1m-b/lucasvinicius/css/textImg.css
+++ b/ds1m-b/lucasvinicius/css/textImg.css
@@ -1,18 +1,40 @@
 .textImg{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     width: 100vw;
 }
 
 .textImg span{
     width: 700px;
+    height: 280px;
     text-align: right;
+    font-size: 1.5rem;
+    display: flex;  
 }
 
 .imagens {
     display: flex;
     flex-direction: column;
-    gap: 128px;
+    gap: 140px;
     height: 900px;
+}
+
+#linha-horizontal2 {
+    
+    height: 300px;
+    border: 3px solid #ffffff;
+}
+
+.quadrado {
+    background-color: gray;
+    width: 105px;
+    height: 25px;
+    color: black;
+    display: none;
+}
+
+
+.textImg span:hover ~ .quadrado {
+    display: flex;
 }
