Adicionado umas coisas a mais

--- a/ds1m-b/felipeflorencio/css/style.css
+++ b/ds1m-b/felipeflorencio/css/style.css
@@ -45,6 +45,12 @@ section {
     margin-left: 5%;
 }
 
+::-webkit-scrollbar{
+    width: 8px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #D2D1E8;
+}
 
 
 /* TABLET */
