--- a/ds1m-b/felipeflorencio/css/header.css
+++ b/ds1m-b/felipeflorencio/css/header.css
@@ -1,4 +1,4 @@
-header {
+header ul{
     height: 5%;
     width: 90%;
     display: flex;
@@ -18,6 +18,10 @@ header h2 {
     letter-spacing: 0.11em;
 }
 
+header h2:hover{
+    transition: color .8s;
+    color: #FAA04B;
+}
 #HOME{
     color: #FAA04B;
 }
