--- a/ds1m-b/felipeflorencio/css/instruments.css
+++ b/ds1m-b/felipeflorencio/css/instruments.css
@@ -46,7 +46,11 @@
         display: none;
     }
     #bginstruments-tablet{
-       display: none;
+        display: inline;
+        position: absolute;
+        top: -15rem;
+        left: -4rem;
+        z-index: -1;
     }
     .instruments__info{
         display: none;
@@ -71,7 +75,7 @@
         display: inline;
         position: absolute;
         z-index: -1;
-        transform: translate(-10%, -25%);
+        transform: translate(-10%, -10%);
         height: 110%;
         width: 110%;
     }
