--- a/ds1m-b/lucasvinicius/css/textImg.css
+++ b/ds1m-b/lucasvinicius/css/textImg.css
@@ -13,7 +13,7 @@
     display: flex;  
 }
 
-.imagens {
+.imagensBo1 {
     display: flex;
     flex-direction: column;
     gap: 140px;
@@ -38,3 +38,4 @@
 .textImg span:hover ~ .quadrado {
     display: flex;
 }
+
