Responsividade em andamento

--- a/ds1t-a/juliaSoares/css/home.css
+++ b/ds1t-a/juliaSoares/css/home.css
@@ -4,12 +4,6 @@
     align-items: center;
 }
 
-.img-slider {
-    margin-top: 10%;
-    margin-left: 250px;
-    height: 600px;
-}
-
 .slider{
     width: 1344px;
     margin: 0 auto;
@@ -82,4 +76,22 @@
 }
 #radio3:checked ~ .navigation-auto .auto-btn3{
     background-color: #82c3b4b8;
+}
+
+@media(max-width: 640px){
+    /* .home{
+        max-width: 375px;
+    }
+
+.slider{
+    width: 300px;   
+    height: 250px;
+}
+
+.slides{
+    width: 500%;
+    height: 40px;
+    display: flex;
+} */
+
 }
