--- a/ds1t-a/juliaSoares/css/niveis-de-torra.css
+++ b/ds1t-a/juliaSoares/css/niveis-de-torra.css
@@ -24,6 +24,7 @@
     color: white;
     font-size: 1.5rem;
     font-family: 'archivo', sans-serif;
+    margin-top: 10px;
 }
 
 .subtitle__torra {
