one page finalizada, falta detalhes, começando mobile

--- a/ds1t-a/marceloGabriel-riotGames/css/sobre-nos.css
+++ b/ds1t-a/marceloGabriel-riotGames/css/sobre-nos.css
@@ -1,5 +1,11 @@
 .sobre-nos {
     height: 100vh;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 30px;
 }
 
 .container-titulo-sobre-nos {
@@ -16,4 +22,41 @@
     width: 100%;
     font-size: 4.25rem;
     color: var(--primary-color);
+}
+
+.fundo-sobre-nos {
+    position: absolute;
+    left: 43%;
+    top: 11%;
+    height: 75vh;
+    width: 57vw;
+    z-index: -1;
+}
+
+.sub-titulo-descricao-sobre-nos {
+    position: relative;
+    width: 50vw;
+    left: -20%;
+}
+
+.sub-titulo-descricao-sobre-nos h2 {
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.sub-titulo-descricao-sobre-nos p {
+    font-size: 1.25rem;
+    font-weight: 400;
+}
+
+.botao-trabalhe-conosco-sobre-nos {
+    display: grid;
+    background-color: #992222;
+    height: 9vh;
+    width: 15vw;
+    font-family: 'Ubuntu';
+    font-weight: 700;
+    align-content: center;
+    text-align: center;
+    border-radius: 10px;
 }
