header limpo, faltando link

--- a/ds1t-a/marceloGabriel-riotGames/css/header.css
+++ b/ds1t-a/marceloGabriel-riotGames/css/header.css
@@ -112,6 +112,10 @@ header {
     width: 100px;
 }
 
+.fa-bars {
+    display: none;
+}
+
 @media (max-width: 660px) {
     header {
         max-width: 660px;
