--- a/ds1m-b/lucasvinicius/css/reset.css
+++ b/ds1m-b/lucasvinicius/css/reset.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 ol, ul, li{
@@ -12,3 +13,4 @@ a{
     text-decoration: none;
     color: inherit;
 }
+
