--- a/ds1m-b/lucasvinicius/css/style.css
+++ b/ds1m-b/lucasvinicius/css/style.css
@@ -22,13 +22,23 @@ header{
 
 main{
     grid-area: content;
-    
+}
+
+.voltar{
+    position: fixed;
+    right: 16px;
+    bottom: 16px;
+    display: grid;
+    place-content: center;
+    font-size: 2.5rem;
+    transition: all .5s;
 }
 
 section{
     height: 100vh;
     width: 100vw;
 }
+
 
 
 footer{
