--- a/ds1m-b/lucasvinicius/css/termos.css
+++ b/ds1m-b/lucasvinicius/css/termos.css
@@ -12,16 +12,20 @@
     border: 2px solid gray;
 }
 
+.linha:hover{
+    color: white;
+}
+
 .imagensFooter {
    display: flex;
    flex-direction: column;
-   height: 200px;
-   width: 800px;
+   height: 150px;
+   width: 85%;
    margin-top: 50px;
 }
 
 .imagensCima {
-    width: 800px;
+    width: 600px;
     display: flex;
     justify-content: center;
     gap: 40px;
@@ -35,12 +39,15 @@
 }
 
 .imagensFooter h1 {
-    width: 80vw;
     text-align: right;
-    font-size: 4rem;
+    font-size: 2.5rem;
 }
 
 .meuNome {
     text-align: center;
     font-size: 1rem;
+}
+
+.meuNome:hover {
+    color: gray;
 }
