--- a/ds1m-b/lucasvinicius/css/textImg.css
+++ b/ds1m-b/lucasvinicius/css/textImg.css
@@ -13,7 +13,7 @@
     display: flex;  
 }
 
-.imagensBo1 {
+.imagensBo1EBo2 {
     display: flex;
     flex-direction: column;
     gap: 140px;
@@ -21,8 +21,12 @@
 }
 
 #linha-horizontal2 {
-    
     height: 300px;
+    border: 3px solid #ffffff;
+}
+
+#linha-horizontal22 {
+    height: 325px;
     border: 3px solid #ffffff;
 }
 
