--- a/ds1m-a/claramartins/css/members.css
+++ b/ds1m-a/claramartins/css/members.css
@@ -1,6 +1,7 @@
 .members_title{
     color: #fff;
     margin-top: 34px;
+    font-size: 2rem;
 }
 .description_jisoo{
     background-image: url(../img/jisoo_member1.jpg);
